--- a/survival.tex
+++ b/survival.tex
@@ -178,8 +178,9 @@ differences that increase with distance from the bottom of the
 cabines, seen in both KM and CPH results, there is a weaker but
 peculiar pattern in the {\em row} and {\em col} hazard rates. The
 different behavior in {\em col} 0-11 from {\em col} 12-24 is likely
-due to separate supply lines of coolant to the two sets. But the
-interleaving pattern of the first set is still a mystery. We also have
-yet to explain the apparent row effects. A very minor
-airflow effect across slots also seems to be present as it mimics
-faster airflow for the middle slots.
+due to separate supply lines of chilled water to the two sets. While
+the temperature was a consistent 42$^\circ$F, there may have been
+minor flow or pressure differences. But the interleaving pattern of
+the first set is still a mystery. We also have yet to explain the
+apparent row effects. A very minor airflow effect across slots also
+seems to be present as it mimics faster airflow for the middle slots.
