--- a/dataprep.tex
+++ b/dataprep.tex
@@ -4,44 +4,38 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Data Collection and Preprocessing}
 \label{section:dataprep}
-Data on GPU life times is constructed from two sources: inventory runs
-and failure event records. Two types of failure events were collected:
-Double Bit Error (DBE) and Off the Bus (OTB). Both errors were found
-to be the ``signature'' event of GPU failures and a trigger for their
-replacement.
+Data on Titan GPU life times is constructed from two sources:
+inventory runs and failure event records. Two types of failure events
+were collected: Double Bit Error (DBE) and Off the Bus (OTB). Both
+errors were found to be the ``signature'' event of GPU failures and a
+trigger for their replacement.
 
 An inventory of GPU serial numbers and their locations is recorded
 each time the system boots. This typically occurs once every few days
-but can be as frequent as a few times per day. An inventory at boot
-time typically occurs over a span of \fix{how many ??} minutes. A
-separate file is produced at each boot time.
-
-The DBE and OTB events are also recorded separately from boot
-time inventories. This was recorded as \fix{ . . . } files.
-
-Inventories are taken at boot time, which can occur anywhere from
-several times per day to more than a month
-apart. Figure~\ref{fig:inventory} shows inter-inventory times that
-appear in the data.
+but can be as frequent as a few times per day. A weekly inventory was
+later added to run independently of system boots when they were fewer
+and farther apart. A single inventory takes about a minute and is
+recorded in a separate file. The DBE and OTB events are also recorded
+separately from the inventories.  Figure~\ref{fig:inventory} shows
+inter-inventory times that appear in the data.
 \begin{figure}[bt]
   \begin{center}
     \includegraphics[width=\columnwidth]{figs/attention_intervals001.pdf}
   \end{center}
   \caption{Inter-inventory times, taken as time intervals between
     unique dates in the data. Note square root scale on the vertical
-    axis.}
+    axis. \fix{George: Add color for another variable? (new-old, date
+      - also doublecheck that these are not DBE/OTB times)??}}
   \label{fig:inventory}
 \end{figure}
-\fix{George: Add color for another variable? (new-old, date)??}
 Notably, there was a period of over a month and many periods of over a
 week that Titan operated without a single reboot.
 
 Initial processing updates an inventory by checking the Serial Number
 (SN) and Location of each GPU and creating or updating a separate
-record for each contiguously observed SN-Location combination.
-
-
-A typical GPU data record is of the form shown in Fig.~\ref{fig:dataraw},
+record for each contiguously observed SN-Location
+combination. Resulting GPU data records are of the form shown in
+Fig.~\ref{fig:dataraw},
 \begin{figure}[tb]
 {\tiny
 \begin{verbatim}
@@ -61,21 +55,11 @@ A typical GPU data record is of the form shown in Fig.~\ref{fig:dataraw},
   processed further in our analysis.}
 \label{fig:dataraw}
 \end{figure}
-\noindent where records for three GPUs are shown. Each record starts
+where records for three are shown. Each record starts
 with a serial number and locations are coded with {\tt c{\it
-    col-row}c{\it cage}s{\it slot}n{\it node}}. The first GPU record
-shows installation in locations {\tt c17-4c1s3n1}, {\tt c21-1c2s5n0},
-{\tt c0-1c1s3n3}, with periods off the system, and finally in {\tt
-  c13-1c1s3n3}, where it stays until August 1, 2017, after which it is
-not seen again. The second is intalled in location {\tt c18-4c1s5n1},
-where it stays until the last data collection date on March 3, 2019,
-at 3:19:11 AM. The third GPU is first installed in locations {\tt
-  c5-4c0s7n0}, {\tt c3-3c1s5n0}, {\tt c0-6c1s7n2}, and {\tt
-  c23-6c1s7n2}, where a ``DBE'' is observed on November 2, 2018, and
-it is not seen again.
-
-The location references are cabinet column (0-24), row (0-7), cage
-(0-3), slot (0-7), and node (0-3) with respect to the layout shown in
+    col-row}c{\it cage}s{\it slot}n{\it node}}. The location
+references are cabinet column (0-24), row (0-7), cage (0-3), slot
+(0-7), and node (0-3) with respect to the layout shown in
 Figure~\ref{fig:layout}.
 \begin{figure}
   \centering
@@ -97,6 +81,19 @@ Figure~\ref{fig:layout}.
     one above Cage 2.}
   \label{fig:layout}
 \end{figure}
+
+
+The first GPU record
+shows installation in locations {\tt c17-4c1s3n1}, {\tt c21-1c2s5n0},
+{\tt c0-1c1s3n3}, with periods off the system, and finally in {\tt
+  c13-1c1s3n3}, where it stays until August 1, 2017, after which it is
+not seen again. The second is intalled in location {\tt c18-4c1s5n1},
+where it stays until the last data collection date on March 3, 2019,
+at 3:19:11 AM. The third GPU is first installed in locations {\tt
+  c5-4c0s7n0}, {\tt c3-3c1s5n0}, {\tt c0-6c1s7n2}, and {\tt
+  c23-6c1s7n2}, where a ``DBE'' is observed on November 2, 2018, and
+it is not seen again.
+
 
 % \fix{Where does cool air arrive? Is it just dumped out at the top of
 %   the heat exchanger and circulate down? I noticed airholes in some
