--- a/refs.bib
+++ b/refs.bib
@@ -3,6 +3,26 @@
 % References
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+
+@Misc{repositoryreference,
+  author = 	 {Review-Blind},
+  title = 	 {Titan {GPU} Reliability Data},
+  howpublished = {DOI},
+  year = 	 2020}
+
+
+@Misc{rcodes,
+  author = 	 {Review-Blind},
+  title = 	 {Rmd File to Reproduce Figures in Sections I-IV and VI},
+  howpublished = {GitHub},
+  year = 	 2020}
+
+@Misc{pycodes,
+  author = 	 {Review-Blind},
+  title = 	 {Python 3.0 Code to Reproduce Figures in Section V},
+  howpublished = {GitHub},
+  year = 	 2020}
+
 @misc{olcf:titan,
   author        = "{Oak Ridge Leadership Computing Facility}",
   title         = "{Titan supercomputer}",
