--- a/intro.tex
+++ b/intro.tex
@@ -56,14 +56,15 @@ Our analysis focuses on GPU boards that were installed in the second
 rework cycle and later, essentially units installed near the beginning
 of 2014 and later. Figure~\ref{fig:chronology} is the only one
 involving data prior to 2014. All analyses and figures that follow use
-only data from 2014 onward. We make the data as well as our analysis
-codes to reproduce the graphics available in a public repository (see,
-\cite[repository]{repositoryreference}).  While the data is only a 7
-MB file, due to the size of Titan it represents over 100,000 years of
-GPU operation and may be the largest publicly available GPU
-reliability data set. Our hope is that others will use it for
-reliability and survival analysis research and go beyond the results
-presented here.
+only data from 2014 onward. We make the data as well as our analysis R
+codes and Python codes to reproduce the graphics in this paper
+publicly available (see, \cite[repository to be added in final
+version]{repositoryreference,rcodes,pycodes}).  While the data is only
+a 7 MB file, due to the size of Titan it represents over 100,000
+collective years of GPU operation and may be the largest publicly
+available GPU reliability data set. Our hope is that others will use
+it for reliability and survival analysis research and go beyond the
+results presented here.
 
 We begin by describing related work in Sec.~\ref{section:related}. Our
 data collection is desctibed in Sec.~\ref{section:dataprep} and the
@@ -72,9 +73,9 @@ Sec.~\ref{section:dataclean}. A time between failures (TBF) analysis
 is given in Sec.~\ref{section:tbf}. Survival analysis based on
 Kaplan-Meier modeling (KM) and Cox regression modeling (CR) of
 relative hazard rates in various locations are in
-Sec.~\ref{section:survival}. A high-level difference between a TBF
-analysis and survival analysis (SA) is that TBF studies largely how
-GPU reliability affects the machine, wheras SA studies largely how the
+Sec.~\ref{section:survival}. The goals of a TBF analysis and of
+survival analysis (SA) are different: TBF studies largely how GPU
+reliability affects the machine, wheras SA studies largely how the
 machine affects GPU reliability.  Finally, we discuss our main
 conclusions and recommendations in Sec.~\ref{section:discussion}.
  
