--- a/dataprep.tex
+++ b/dataprep.tex
@@ -23,13 +23,13 @@ inter-inventory times that appear in the data.
     \includegraphics[width=\columnwidth]{figs/attention_intervals001.pdf}
   \end{center}
   \caption{Inter-inventory times, taken as time intervals between
-    unique dates in the data. Note square root scale on the vertical
-    axis. \fix{George: Add color for another variable? (new-old, date
-      - also doublecheck that these are not DBE/OTB times)??}}
+    unique dates in the data and removing those less than a day. Note
+    square root scale on the vertical axis.}
   \label{fig:inventory}
 \end{figure}
 Notably, there was a period of over a month and many periods of over a
-week that Titan operated without a single reboot.
+week that Titan operated without a single reboot, especially in the
+2014-2015 time frame.
 
 Initial processing updates an inventory by checking the Serial Number
 (SN) and Location of each GPU and creating or updating a separate
