--- a/survival.tex
+++ b/survival.tex
@@ -11,20 +11,20 @@
 \end{figure*}
 \section{Survival Analysis}
 \label{section:survival}
-\renewcommand{\pkg}[1]{\textsf{#1}}
-Survival analysis (SA) methods, sometimes referred as time to event
-methods, focus on the effect of the machine on the GPU units. This is
-useful for determining factors that contribute to failures and
-potentially for root cause analysis. SA methods use and combine
-information across the operational lifetimes of all GPUs
-\cite{survival}. For these analyses, we take apart the location string
-of each GPU into variables {\em col, row, cage, slot, and node} and
-study the influence of the locations on the GPU life times. The
-construction of a GPU life time is more complex than it initially
-appears because the units are observed only at reboot time, because
-most units were proactively replaced to prevent failure, and because
-some units continue in operation after OTB and DBE events (when a
-second reboot may be successful).
+\renewcommand{\pkg}[1]{\textsf{#1}} Survival analysis (SA) methods,
+sometimes referred as time to event methods, focus on the effect of
+the machine on the GPU units. These methods have roots in biomedical
+statistics, where the effect on the patient is most important. So here
+we treat the GPUs as patients to determine factors that contribute to
+failures. SA methods use and combine information across the
+operational lifetimes of all GPUs. For these analyses,
+we take apart the location string of each GPU into variables {\em col,
+  row, cage, slot, and node} and study the influence of the locations
+on the GPU life times. The construction of a GPU life time is more
+complex than it initially appears because the units are observed only
+at reboot time, because most units were proactively replaced to
+prevent failure, and because some units continue in operation after
+OTB and DBE events (when a second reboot may be successful).
 
 A unit that experiences at least one OTB or DBE event and is removed
 from the system is considered failed and its operation time until the
@@ -40,7 +40,7 @@ available or that have not failed. This applies to our study because
 of proactive GPU replacement before failure, because most units were
 still in operation when the system was shut down, and also because
 life spans were recorded only at inventory times. We use censoring
-concepts on the proactive replacements and units still in operation at
+concepts on the proactive replacements and on units still in operation at
 the end. This allows us to use all of the GPU life time data,
 including units that did not fail. But we ignore the inspection time
 censoring, treating inventory times as exact failure times to reduce
@@ -74,14 +74,14 @@ shaded around the curves.
 \begin{figure}
   \centering
   \includegraphics[width=\columnwidth]{figs/cox_o001.pdf}
-  \caption{GPU hazard ratios from Cox regression model on {\tt old}
+  \caption{GPU hazard ratios from Cox regression model on {\em old}
     batch.}
   \label{fig:cox-old}
 \end{figure}
 \begin{figure}
   \centering
   \includegraphics[width=\columnwidth]{figs/cox_n001.pdf}
-  \caption{GPU hazard ratios from Cox regression model on {\tt new}
+  \caption{GPU hazard ratios from Cox regression model on {\em new}
     batch.}
   \label{fig:cox-new}
 \end{figure}
